--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,8 @@ http {
   server {
     listen 80;
     server_name docker.jeongyongseong.kr;
+
+    # HTTP → HTTPS 리다이렉트
     return 301 https://$host$request_uri;
   }
 
@@ -17,11 +19,20 @@ http {
     ssl_certificate /etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem;
 
+    # Next.js 정적 파일 경로
+    location ~* ^/_next/static/ {
+      alias /app/.next/standalone/.next/static/;
+      access_log off;
+      expires max;
+      add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    # Next.js 서버로 프록시
     location / {
       proxy_pass http://web:3000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
+      proxy_set_header Connection "upgrade";
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
     }
