--- a/nginx.conf
+++ b/nginx.conf
@@ -19,13 +19,13 @@ http {
     ssl_certificate /etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem;
 
-    # Next.js 정적 파일 경로
     location ~* ^/_next/static/ {
-      alias /app/.next/static/;
-      access_log off;
-      expires max;
-      add_header Cache-Control "public, max-age=31536000, immutable";
-    }
+        root /app;
+        access_log off;
+        expires max;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+}
+
 
     # Next.js 서버로 프록시
     location / {
