--- a/nginx.conf
+++ b/nginx.conf
@@ -20,11 +20,11 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem;
 
     location ~* ^/_next/static/ {
-        root /app;
+        alias /app/.next/static/;  
         access_log off;
         expires max;
         add_header Cache-Control "public, max-age=31536000, immutable";
-}
+    }
 
 
     # Next.js 서버로 프록시
