fix: nginx static 경로 변경

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
     ssl_certificate /etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem;
 
-    location ~* ^/_next/static/ {
+    location /_next/static/ {
         alias /app/.next/static/;  
         access_log off;
         expires max;
