--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,33 @@ services:
       - NODE_ENV=production
     expose:
       - "3000"
+    restart: unless-stopped
+    networks:
+      - app-network
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.25-alpine
     container_name: nginx-proxy
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem:/etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem:ro
+      - /etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem:/etc/letsencrypt/live/docker.jeongyongseong.kr/privkey.pem:ro
+      - next-static:/usr/share/nginx/html/_next/static
     depends_on:
       - web
+    restart: unless-stopped
+    networks:
+      - app-network
 
 volumes:
   next-static:
+    driver_opts:
+      type: none
+      device: ${PWD}/.next/static
+      o: bind
+networks:
+  app-network:
+    driver: bridge
