feat: volumes 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - NODE_ENV=production
     expose:
       - "3000"
+    volumes:
+      - next-static:/app/.next/static
     restart: unless-stopped
     networks:
       - app-network
