--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       - NODE_ENV=production
     expose:
+      - "3000"
+    ports:
       - "3001:3000"
     volumes:
       - next-static:/app/.next/static
