--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,8 @@ http {
   }
 
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name docker.jeongyongseong.kr;
 
     ssl_certificate /etc/letsencrypt/live/docker.jeongyongseong.kr/fullchain.pem;
@@ -35,6 +36,11 @@ http {
     }
 
     location / {
+
+        # 디버깅용 헤더 추가
+        add_header X-Debug-Location "RootLocationBlockEntered" always;
+        add_header X-Debug-Proxy-Target "http://web:3000" always;
+
       proxy_pass http://web:3000; 
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
