--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
             
             echo "Building Docker images (web service specifically)..."
 
-            sudo docker-compose build --no-cache \
+            sudo docker compose build --no-cache \
               --build-arg BUILD_ARG_NEXT_PUBLIC_API_URL="${{secrets.NEXT_PUBLIC_TEST_KEY}}" \
             web
             
