--- a/nginx.conf
+++ b/nginx.conf
@@ -8,8 +8,8 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
-    error_log   /var/log/nginx/error.log   warn; # 또는 debug (문제 해결 시)
+    access_log  /var/log/nginx/access.log  main; # 디버깅용
+    error_log   /var/log/nginx/error.log   warn; # 디버깅용
 
     sendfile        on;
     keepalive_timeout  65;
