--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: docker_test
+    env_file:
+      - app.env
     environment:
       - NODE_ENV=production
     expose:
